Fixed comments and buttons

--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
         музей
       </h1>
 
-      <div class="header__button button">
-        <a href="#events" class="button__name"></a>
-        <a href="#" class="button__icon"></a>
+      <div class="header__button button button--default">
+        <a href="#events" class="button__name button--default__name"></a>
+        <a href="#subscription" class="button__icon button--default__icon"></a>
       </div>
     </header>
 
@@ -68,6 +68,7 @@
           <a
             href="https://goo.gl/maps/iR5eMWhCfeZHAxN17"
             class="menu__call menu__call--action"
+            target="_blank"
           >
             Як дістатися?
           </a>
@@ -176,18 +177,18 @@
           Бути в курсі всіх актуальних подій та останніх новин.
         </p>
 
-        <form action="#" class="subscription__button button">
+        <form action="#" class="subscription__button button button--input">
           <label for="email">
             <input
               name="email"
               id="email"
               type="email"
               placeholder="E-mail"
-              class="button__name"
+              class="button__name button--input__name"
               required
             >
           </label>
-          <button type="submit" class="button__icon"></button>
+          <button type="submit" class="button__icon button--input__icon"></button>
         </form>
       </section>
     </main>
@@ -235,17 +236,29 @@
         </span>
       </p>
 
-      <p class="footer__contacts">
+      <p class="footer__contacts" id="contacts">
         <span class="footer__title">Контакти:</span>
 
         <span class="footer__info">
-          <a href="https://goo.gl/maps/wkwkKcTbmVy5AG989" target="_blank">вул. М. Грушевського, 6; Київ, 01001</a><br>
+          <a
+            href="https://goo.gl/maps/wkwkKcTbmVy5AG989"
+            target="_blank"
+            class="footer__link"
+          >
+            вул. М. Грушевського, 6; Київ, 01001
+          </a><br>
 
-          <a href="tel:+38 (044) 278-13-57">тел. +38 (044) 278-13-57</a><br>
+          <a href="tel:+38 (044) 278-13-57" class="footer__link">
+            тел. +38 (044) 278-13-57
+          </a><br>
 
-          <a href="tel:+38 (044) 278-13-57">факс +38 (044) 278-74-54</a><br>
+          <a href="tel:+38 (044) 278-13-57" class="footer__link">
+            факс +38 (044) 278-74-54
+          </a><br>
 
-          <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a><br>
+          <a href="mailto:info@namu.kiev.ua" class="footer__link">
+            e-mail: info@namu.kiev.ua
+          </a><br>
         </span>
       </p>
 
@@ -255,22 +268,38 @@
 
       <nav class="footer__nav">
         <ul>
-          <li class="footer__link">
-            <a href="#gallery">Галерея</a>
+          <li class="footer__list">
+            <a href="#gallery" class="footer__link">
+              Галерея
+            </a>
           </li>
 
           <li>
-            <a href="#events">Виставки та події</a>
+            <a href="#events" class="footer__link">
+              Виставки та події
+            </a>
           </li>
         </ul>
 
         <ul>
-          <li class="footer__link">
-            <a href="https://www.facebook.com/namu.museum/" target="_blank">Про нас</a>
+          <li class="footer__list">
+            <a
+              href="https://www.facebook.com/namu.museum/"
+              target="_blank"
+              class="footer__link"
+            >
+              Про нас
+            </a>
           </li>
 
           <li>
-            <a href="https://goo.gl/maps/1DHZ9D3PvNBVTe439" target="_blank">Контакти</a>
+            <a
+              href="https://goo.gl/maps/1DHZ9D3PvNBVTe439"
+              target="_blank"
+              class="footer__link"
+            >
+              Контакти
+            </a>
           </li>
         </ul>
       </nav>
