--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <script src="./scripts/main.js" defer></script>
   </head>
 
   <header class="header">
@@ -18,7 +19,7 @@
           >
         </a>
         <div class="header__logo-wrapper">
-          <a href="/" class="logo">
+          <a href="#" class="logo">
             <img
               class="header__logo"
               src="images/namu.png"
@@ -34,7 +35,7 @@
     <div class="container">
       <div class="menu__content">
         <div class="menu__top header__logo-wrapper">
-          <a href="/" class="logo" title="close menu">
+          <a href="#" class="logo" title="close menu">
             <img
               class="header__logo"
               src="images/namu.png"
@@ -75,7 +76,7 @@
   </nav>
 
   <body class="page__body">
-    <section class="page__section hero" id="hero">
+    <section class="page__section hero container" id="hero">
       <div class="hero__image">
         <img src="images/museum.png" alt="Museum">
       </div>
@@ -238,16 +239,17 @@
       <p class="subscription__text">
         Бути в курсі всіх актуальних подій та останніх новин.
       </p>
-      <form class="button" action="/">
+      <form class="form" action="/" id="get-user-email">
         <label for="btn-mail"></label>
         <input
-          class="button__mail"
+          class="form__mail"
           type="email"
           name="email"
           placeholder="E-mail"
           id="btn-mail"
+          required
         >
-        <button type="submit" class="button__img--red"></button>
+        <button type="submit" class="form__img--red"></button>
       </form>
     </section>
 
