--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,167 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page">
+    <!-- <h1>Hello Mate Academy</h1> -->
     <script type="text/javascript" src="scripts/main.js"></script>
+
+    <header class="page__section header">
+      <!-- <div class="header__images">
+        <div class="header__images--container">
+          <img
+            src="./images/namu_image-1800x1200.svg"
+            alt="namu_image"
+            class="header__images--image"
+          >
+
+          <a href="#" class="header__images--logo">
+            <img
+              src="./images/na_mu.svg"
+              alt="namu_logo"
+              class=header__images--logo-image"
+            >
+          </a>
+        </div>
+      </div> -->
+
+      <div class="container header__container">
+        <div class="header__images">
+          <div class="header__images--container">
+            <img
+              src="./images/namu_image-1800x1200.svg"
+              alt="namu_image"
+              class="header__images--image"
+            >
+  
+            <a href="#" class="header__images--logo">
+              <img
+                src="./images/na_mu.svg"
+                alt="namu_logo"
+                class="header__images--logo-image"
+              >
+            </a>
+          </div>
+        </div>
+        <a href="#menu" class="header__nav--link">
+          <img
+            src="./images/nav_image.svg"
+            alt="nav_image"
+            class="header__nav--image"
+          >
+        </a>
+
+        <h1 class="header__title">
+          Художній музей
+        </h1>
+
+        <div class="header__tickets tickets">
+          <a href="#" class="header__tickets--link tickets--link">
+            Квитки
+          </a>
+
+          <a href="#" class="header__tickets--arrows">
+            <img
+              src="./images/tickets_group.svg"
+              alt="tickets_arrow"
+              class="header__tickets--arrow tickets--arrow"
+            >
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <section class="page__section events">
+        <div class="container">
+          <h2 class="events__title">
+            Актуальні події
+          </h2>
+
+          <div class="grid grid__laptop">
+            <div class="grid__item--laptop-1-7">
+              <div class="events__images">
+                <img
+                  src="./images/events_image_1.svg"
+                  alt="image_1"
+                  class="events__image"
+                >
+              </div>
+            </div>
+
+            <div class="grid__item--laptop-9-12">
+              <div class="events__items">
+                <div class="events__date">
+                  <h4 class="events__date--title">
+                    Виставка
+                  </h4>
+
+                  <div class="events__date--item">
+                    26.08-29.11.2019
+                  </div>
+                </div>
+
+                <div class="events__container-title">
+                  <h3 class="events__subtitle">
+                    Йду і повертаюсь
+                  </h3>
+
+                  <div class="events__container-title--rectangle"></div>
+                </div>
+
+                <p class="events__paragraph">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>              
+            </div>
+
+            <div class="grid__item--laptop-1-7">
+              <div class="events__images">
+                <img
+                  src="./images/events_image_2.svg"
+                  alt="image_2"
+                  class="events__image"
+                >
+              </div>
+            </div>
+
+            <div class="grid__item--laptop-9-12">
+              <div class="events__items">
+                <div class="events__date">
+                  <h4 class="events__date--title">
+                    Виставка
+                  </h4>
+
+                  <div class="events__date--item">
+                    26.08-29.11.2019
+                  </div>
+                </div>
+
+                <div class="events__container-title">
+                  <h3 class="events__subtitle">
+                    І спогади і мрії
+                  </h3>
+
+                  <div class="events__container-title--rectangle"></div>
+                </div>
+
+                <p class="events__paragraph">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="events__images-section">
+          <img
+            src="./images/events_image_3.svg"
+            alt="image_3"
+            class="events__image-section">
+        </div>
+      </section>
+    </main>
   </body>
 </html>
