--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page">
-    <!-- <h1>Hello Mate Academy</h1> -->
     <script type="text/javascript" src="scripts/main.js"></script>
 
     <header class="page__section header">
@@ -47,6 +46,7 @@
             </a>
           </div>
         </div>
+
         <a href="#menu" class="header__nav--link">
           <img
             src="./images/nav_image.svg"
@@ -59,8 +59,8 @@
           Художній музей
         </h1>
 
-        <div class="header__tickets tickets">
-          <a href="#" class="header__tickets--link tickets--link">
+        <div class="header__tickets form-field">
+          <a href="#" class="header__tickets--link form-field--link">
             Квитки
           </a>
 
@@ -68,7 +68,7 @@
             <img
               src="./images/tickets_group.svg"
               alt="tickets_arrow"
-              class="header__tickets--arrow tickets--arrow"
+              class="header__tickets--arrow form-field--arrow"
             >
           </a>
         </div>
@@ -82,7 +82,7 @@
             Актуальні події
           </h2>
 
-          <div class="grid grid__laptop">
+          <div class="grid__laptop">
             <div class="grid__item--laptop-1-7">
               <div class="events__images">
                 <img
@@ -116,7 +116,7 @@
                 <p class="events__paragraph">
                   Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
                 </p>
-              </div>              
+              </div>
             </div>
 
             <div class="grid__item--laptop-1-7">
@@ -161,7 +161,133 @@
           <img
             src="./images/events_image_3.svg"
             alt="image_3"
-            class="events__image-section">
+            class="events__image-section"
+          >
+        </div>
+      </section>
+
+      <section class="pade__section lecture">
+        <div class="lecture__items">
+          <div class="lecture__date">
+            <h4 class="lecture__date--title">
+              Лекція
+            </h4>
+
+            <div class="lecture__date--item">
+              26/08/2019 - 11:00
+            </div>
+          </div>
+
+          <h3 class="lecture__subtitle">
+            Від класицизму до романтизму
+          </h3>
+        </div>
+      </section>
+
+      <section class="page__section gallery">
+        <div class="container gallery__container">
+          <h2 class="gallery__title">
+            Галерея
+          </h2>
+
+          <div class="gallery__tablet">
+            <div class="grid__tablet gallery__tablet--container">
+              <div class="grid__item--tablet-1-3">
+                <div class="gallery__images">
+                  <img
+                    src="./images/gallery_image_1.svg"
+                    alt="image_1"
+                    class="gallery__image"
+                  >
+                </div>
+              </div>
+
+              <div class="grid__item--tablet-4-6">
+                <div class="gallery__images">
+                  <img
+                    src="./images/gallery_image_2.svg"
+                    alt="image_2"
+                    class="gallery__image gallery__image--tablet"
+                  >
+                </div>
+              </div>
+            </div>
+
+            <div class="gallery__tablet--pointer">
+              <div class="gallery__tablet--pointer-item"></div>
+              <div class="gallery__tablet--pointer-item"></div>
+              <div class="gallery__tablet--pointer-item"></div>
+              <div class="gallery__tablet--pointer-item"></div>
+            </div>
+          </div>
+
+          <div class="grid__laptop gallery__laptop">
+            <div class="grid__item--laptop-1-4">
+              <div class="gallery__images">
+                <img
+                  src="./images/gallery_image_1.svg"
+                  alt="image_1"
+                  class="gallery__image gallery__image--first"
+                >
+              </div>
+            </div>
+
+            <div class="grid__item--tablet-4-6 grid__item--laptop-5-12">
+              <div class="gallery__images">
+                <img
+                  src="./images/gallery_image_3.svg"
+                  alt="image_3"
+                  class="gallery__image gallery__image--first"
+                >
+              </div>
+            </div>
+
+            <div class="grid__item--laptop-1-8">
+              <div class="gallery__images">
+                <img
+                  src="./images/gallery_image_4.svg"
+                  alt="image_4"
+                  class="gallery__image"
+                >
+              </div>
+            </div>
+
+            <div class="grid__item--laptop-9-12">
+              <div class="gallery__images">
+                <img
+                  src="./images/gallery_image_5.svg"
+                  alt="image_5"
+                  class="gallery__image"
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section subscribe">
+        <div class="container subscribe__container">
+          <h2 class="subscribe__title">
+            Підписка
+          </h2>
+
+          <p class="subscribe__paragraph">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+
+          <div class="subscribe__email form-field">
+            <a href="#" class="subscribe__email--link form-field--link">
+              E-mail
+            </a>
+  
+            <a href="#" class="subscribe__email--arrows">
+              <img
+                src="./images/email_group.svg"
+                alt="subscribe_arrow"
+                class="subscribe__email--arrow form-field--arrow"
+              >
+            </a>
+          </div>
         </div>
       </section>
     </main>
