--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,215 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link
+      type="image/png"
+      sizes="16x16"
+      rel="icon"
+      href="../src/images/favicon.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600&family=Poppins:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header" id="home">
+      <div class="header__content">
+        <div class="header__menu">
+          <a href="#burger" class="header__menu--button">
+            <div class="header__menu--button-line"></div>
+            <div class="header__menu--button-line"></div>
+            <div class="header__menu--button-line"></div>
+          </a>
+          <div class="header__menu--logo">na<br>mu</div>
+        </div>
+        <div class="header__title">художній музей</div>
+        <a href="#events" class="header__tickets">
+          <div class="header__tickets--text">квитки</div>
+          <div class="header__tickets--arrow"></div>
+        </a>
+        <div class="header__event">події</div>
+      </div>
+      <div class="header__image"></div>
+    </header>
+    <nav class="burgerMenu" id="burger">
+      <div class="burgerMenu__content">
+        <div class="header__menu">
+          <a href="#" class="header__menu--button">
+            <div class="header__menu--button-line"></div>
+            <div class="header__menu--button-line"></div>
+            <div class="header__menu--button-line"></div>
+          </a>
+          <div class="header__menu--logo">na<br>mu</div>
+        </div>
+        <ul class="burgerMenu__list">
+          <li class="burgerMenu__list--li">
+            <a href="#events" class="burgerMenu__list--li">Актуальні події</a>
+          </li>
+          <li class="burgerMenu__list--li">
+            <a href="#gallery" class="burgerMenu__list--li">Галерея</a>
+          </li>
+          <li class="burgerMenu__list--li">
+            <a href="#subscription" class="burgerMenu__list--li">Підписка</a>
+          </li>
+          <li class="burgerMenu__list--li">
+            <a href="#contacts" class="burgerMenu__list--li">Котакти</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <section class="events" id="events">
+      <div class="events__title">актуальні події</div>
+      <div class="events__painting">
+        <div class="events__painting--image">
+          <img
+            src="../src/images/paint1.svg"
+            alt="7"
+            class="events__painting--image events__painting--image-1">
+        </div>
+        <div class="events__painting--description">
+          <div class="events__painting--description-data">
+            <div class="events__painting--description-data--ex">виставка</div>
+            <div class="events__painting--description-data--data">26.08-29.11.2019</div>
+          </div>
+          <div class="events__painting--description-title">Йду і повертаюсь</div>
+          <div class="events__painting--description-text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
+        </div>
+      </div>
+      <div class="events__painting">
+        <div class="events__painting--image">
+          <img
+            src="../src/images/paint2.svg"
+            alt="6"
+            class="events__painting--image">
+        </div>
+        <div class="events__painting--description">
+          <div class="events__painting--description-data">
+            <div class="events__painting--description-data--ex">виставка</div>
+            <div class="events__painting--description-data--data">26.08-29.11.2019</div>
+          </div>
+          <div class="events__painting--description-title">І спогади і мрії</div>
+          <div class="events__painting--description-text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
+        </div>
+      </div>
+      <div class="events__paintBig"></div>
+    </section>
+    <section class="screensaver">
+      <div class="screensaver__image">
+        <img src="../src/images/paint3.svg" alt="5" class="screensaver__image">
+      </div>
+      <div class="screensaver__content">
+        <div class="screensaver__content--frame">
+          <div class="screensaver__content--frame--lessons">лекція</div>
+          <div class="screensaver__content--frame--data">26/08/2019 - 11:00</div>
+          <div class="screensaver__content--frame--title">Від класицизму до романтизму</div>
+        </div>
+      </div>
+    </section>
+    <section class="gallery" id="gallery">
+      <div class="gallery__title">Галерея</div>
+      <div class="gallery__container">
+        <img src="../src/images/paint4.svg" alt="1" class="gallery__container--paintings gallery__container--paintings-1">
+        <img src="../src/images/paint5.svg" alt="2" class="gallery__container--paintings gallery__container--paintings-2">
+        <img src="../src/images/paint6.svg" alt="3" class="gallery__container--paintings gallery__container--paintings-3">
+        <img src="../src/images/paint7.svg" alt="4" class="gallery__container--paintings gallery__container--paintings-4">
+      </div>
+      <div class="gallery__scroll">
+        <div class="gallery__scroll--circle"></div>
+        <div class="gallery__scroll--circle"></div>
+        <div class="gallery__scroll--circle"></div>
+        <div class="gallery__scroll--circle"></div>
+      </div>
+    </section>
+    <section class="subscription" id="subscription">
+      <div class="subscription__image">
+      </div>
+      <div class="subscription__grid">
+        <div class="subscription__content">
+          <div class="subscription__content--title">Підписка</div>
+          <div class="subscription__content--text">Бути в курсі всіх актуальних подій та останніх новин.</div>
+          <form
+            action="#"
+            method="get"
+            class="subscription__content--form">
+            <label for="GET"></label>
+            <input id="GET" type="email"
+              placeholder="E-mail"
+              class="subscription__content--input"
+              required>
+            <button
+              type="submit"
+              class="subscription__content--arrow">
+            </button>
+          </form>
+        </div>
+      </div>
+    </section>
+    <section class="footer" id="contacts">
+      <div class="footer__content">
+        <div class="footer__column footer__column--1">
+          <a href="#" class="footer__column--1--logo">
+            na <br>mu
+          </a>
+          <div class="footer__column--1--network">
+            <a
+              href="https://www.facebook.com/"
+              class="footer__column--1--network-meta"
+              target="_blank"></a>
+            <a
+              href="https://www.instagram.com"
+              class="footer__column--1--network-insta"
+              target="_blank">
+            </a>
+          </div>
+        </div>
+        <div class="footer__column footer__column--2">
+          Графік роботи<br><br>
+          <strong>12:00 — 20:00</strong> середа<br>
+          <strong>12:00 — 20:00</strong> четвер<br>
+          <strong>12:00 — 20:00</strong> п’ятниця<br>
+          <strong>11:00 — 19:00</strong> субота<br>
+          <strong>11:00 — 19:00</strong> неділя<br>
+          <br><br>
+          <strong>Вихідні</strong>: понеділок, вівторок<br>
+          Каса припиняє роботу за 1 годину<br>
+          до закриття музею
+        </div>
+        <div class="footer__column footer__column--3">
+          Контакти: <br><br>вул. М. Грушевського, 6; Київ, 01001<br>
+          тел. +38 (044) 278-13-57<br>
+          факс +38 (044) 278-74-54<br>
+          e-mail: info@namu.kiev.ua
+        </div>
+        <a href="#" class="footer__column footer__column--arrow"></a>
+        <div class="footer__column footer__column--4"></div>
+        <div class="footer__column footer__column--5">
+          <a
+            href="#gallery"
+            class="footer__column">
+            Галерея
+          </a><br><br>
+          <a
+            href="#events"
+            class="footer__column">
+            Виставки та події
+          </a>
+        </div>
+        <div class="footer__column footer__column--6">
+          <a href="#contacts" class="footer__column">
+            Про Нас
+          </a><br><br>
+          <a href="#contacts" class="footer__column">
+            Котакти
+          </a>
+        </div>
+        <div class="footer__column footer__column--7">
+          <div class="footer__column--7-1">Copyright © 2019. All Rights Reserved.</div>
+          <div class="footer__column--7-2">Designed by Zhyriada Marina</div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
