--- a/src/index.html
+++ b/src/index.html
@@ -10,23 +10,35 @@
     <script type="text/javascript" src="scripts/main.js"></script>
 
     <header class="page__section header">
-      <!-- <div class="header__images">
-        <div class="header__images--container">
-          <img
-            src="./images/namu_image-1800x1200.svg"
-            alt="namu_image"
-            class="header__images--image"
-          >
+      <nav class="header__menu"  id="menu">
+        <a href="#" class="header__menu--close-link">
+          <div class="header__menu--line header__menu--close-link-1"></div>
+          <div class="header__menu--line header__menu--close-link-2"></div>
+        </a>
 
-          <a href="#" class="header__images--logo">
-            <img
-              src="./images/na_mu.svg"
-              alt="namu_logo"
-              class=header__images--logo-image"
-            >
-          </a>
-        </div>
-      </div> -->
+        <ul class="header__menu--items menu">
+          <li class="header__menu--item menu__item">
+            <a href="#gallery" class="header__menu--link menu__link">
+              Галерея
+            </a>
+          </li>
+          <li class="header__menu--item menu__item">
+            <a href="#events" class="header__menu--link menu__link">
+              Виставки та події
+            </a>
+          </li>
+          <li class="header__menu--item menu__item">
+            <a href="#subscribe" class="header__menu--link menu__link">
+              Про Нас
+            </a>
+          </li>
+          <li class="header__menu--item menu__item">
+            <a href="#contacts" class="header__menu--link menu__link">
+              Контакти
+            </a>
+          </li>
+        </ul>
+      </nav>
 
       <div class="container header__container">
         <div class="header__images">
@@ -36,7 +48,7 @@
               alt="namu_image"
               class="header__images--image"
             >
-  
+
             <a href="#" class="header__images--logo">
               <img
                 src="./images/na_mu.svg"
@@ -76,7 +88,7 @@
     </header>
 
     <main>
-      <section class="page__section events">
+      <section class="page__section events" id="events">
         <div class="container">
           <h2 class="events__title">
             Актуальні події
@@ -184,7 +196,7 @@
         </div>
       </section>
 
-      <section class="page__section gallery">
+      <section class="page__section gallery" id="gallery">
         <div class="container gallery__container">
           <h2 class="gallery__title">
             Галерея
@@ -265,7 +277,7 @@
         </div>
       </section>
 
-      <section class="page__section subscribe">
+      <section class="page__section subscribe" id="subscribe">
         <div class="container subscribe__container">
           <h2 class="subscribe__title">
             Підписка
@@ -291,5 +303,155 @@
         </div>
       </section>
     </main>
+
+    <footer class="page__section footer">
+      <div class="container footer__container">
+        <div class="footer__networks">
+          <div class="grid grid__tablet grid__laptop">
+            <div class="grid__item grid__item--tablet-1-1 grid__item--laptop-1-1 footer__networks--container">
+              <a href="#" class="footer__networks--logo">
+                <img
+                  src="./images/na_mu.svg"
+                  alt="namu_logo"
+                  class="footer__networks--logo-image"
+                >
+              </a>
+
+              <div class="footer__networks--items">
+                <a
+                  href="https://www.facebook.com/"
+                  class="footer__networks--item"
+                  rel="noopener"
+                  target="_blank"
+                >
+                  <img
+                    src="./images/facebook_image.svg"
+                    alt="facebook"
+                    class="footer__networks--facebook"
+                  >
+                </a>
+    
+                <a
+                  href="https://www.instagram.com/"
+                  class="footer__networks--item"
+                  rel="noopener"
+                  target="_blank"
+                >
+                  <img
+                    src="./images/instagram_image.svg"
+                    alt="instagram"
+                    class="footer__networks--instagram"
+                  >
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__content" id="contacts">
+          <div class="grid">
+            <div class="grid__item grid__item--tablet-2-3 grid__item--laptop-3-4">
+              <h5 class="footer__content--title">
+                Графік роботи
+              </h5>
+
+              <div class="footer__content--items">
+                <span class="footer__content--items-bold">12:00 — 20:00</span> середа
+                <br>
+                <span class="footer__content--items-bold">12:00 — 20:00</span> четвер
+                <br>
+                <span class="footer__content--items-bold">12:00 — 20:00</span> п’ятниця
+                <br>
+                <span class="footer__content--items-bold">12:00 — 20:00</span> субота
+                <br>
+                <span class="footer__content--items-bold">12:00 — 20:00</span> неділя
+
+                <p class="footer__content--items-paragraph">
+                  <span class="footer__content--items-bold">Вихідні:</span> понеділок, вівторок
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </div>
+            </div>
+
+            <div class="grid__item grid__item--tablet-4-5 grid__item--laptop-5-6">
+              <h5 class="footer__content--title">
+                Контакти:
+              </h5>
+
+              <div class="footer__content--items">
+                вул. М. Грушевського, 6; Київ,
+                <br>
+                01001 тел. +38 (044) 278-13-57
+                <br>
+                факс +38 (044) 278-74-54
+                <br>
+                e-mail: info@namu.kiev.ua
+              </div>
+            </div>
+          </div>
+
+          <div class="footer__content--up">
+            <a href="#" class="footer__content--up-item">
+              <img
+                src="./images/footer_arrow-up.svg"
+                alt="arrow-up"
+                class="footer__content--up-arrow-up"
+              >
+            </a>
+          </div>
+
+          <div class="footer__content--line">
+            <div class="grid__tablet grid__laptop">
+              <div class="grid__item--tablet-2-5 grid__item--laptop-7-7 footer__content--line-container"></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__menu">
+          <div class="grid">
+            <div class="grid__item grid__item--tablet-2-3 grid__item--laptop-8-9">
+              <ul class="footer__menu--items menu">
+                <li class="footer__menu--item menu__item">
+                  <a href="#gallery" class="footer__menu--link menu__link">
+                    Галерея
+                  </a>
+                </li>
+                <li class="footer__menu--item menu__item">
+                  <a href="#events" class="footer__menu--link menu__link">
+                    Виставки та події
+                  </a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="grid__item grid__item--tablet-4-5 grid__item--laptop-10-10">
+              <ul class="footer__menu--items menu">
+                <li class="footer__menu--item menu__item">
+                  <a href="#subscribe" class="footer__menu--link menu__link">
+                    Про Нас
+                  </a>
+                </li>
+                <li class="footer__menu--item menu__item">
+                  <a href="#contacts" class="footer__menu--link menu__link">
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__information">
+          <div class="footer__information--item">
+            Designed by Zhyriada Marina
+          </div>
+
+          <div class="footer__information--item">
+            Copyright © 2019. All Rights Reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
