--- a/src/index.html
+++ b/src/index.html
@@ -306,140 +306,133 @@
 
     <footer class="page__section footer">
       <div class="container footer__container">
-        <div class="footer__networks">
-          <div class="grid grid__tablet grid__laptop">
-            <div class="grid__item grid__item--tablet-1-1 grid__item--laptop-1-1 footer__networks--container">
-              <a href="#" class="footer__networks--logo">
-                <img
-                  src="./images/na_mu.svg"
-                  alt="namu_logo"
-                  class="footer__networks--logo-image"
-                >
-              </a>
+        <div class="footer__grid">
+          <div class="footer__top">
+            <div class="footer__top--logo">
+              <div class="footer__top--logo-container">
+                <a href="#" class="footer__top--logo-link">
+                  <img
+                    src="./images/na_mu.svg"
+                    alt="namu_logo"
+                    class="footer__top--logo-image"
+                  >
+                </a>
+              </div>
+            </div>
 
-              <div class="footer__networks--items">
+            <div class="footer__top--networks">
+              <div class="footer__top--networks-items">
                 <a
                   href="https://www.facebook.com/"
-                  class="footer__networks--item"
+                  class="footer__top--networks-item"
                   rel="noopener"
                   target="_blank"
                 >
                   <img
                     src="./images/facebook_image.svg"
                     alt="facebook"
-                    class="footer__networks--facebook"
+                    class="footer__top--networks-facebook"
                   >
                 </a>
-    
+
                 <a
                   href="https://www.instagram.com/"
-                  class="footer__networks--item"
+                  class="footer__top--networks-item"
                   rel="noopener"
                   target="_blank"
                 >
                   <img
                     src="./images/instagram_image.svg"
                     alt="instagram"
-                    class="footer__networks--instagram"
+                    class="footer__top--networks-instagram"
                   >
                 </a>
               </div>
             </div>
           </div>
+
+          <div class="footer__content footer__content--schedule" id="contacts">
+            <h5 class="footer__content--title">
+              Графік роботи
+            </h5>
+
+            <div class="footer__content--items">
+              <span class="footer__content--items-bold">12:00 — 20:00</span> середа
+              <br>
+              <span class="footer__content--items-bold">12:00 — 20:00</span> четвер
+              <br>
+              <span class="footer__content--items-bold">12:00 — 20:00</span> п’ятниця
+              <br>
+              <span class="footer__content--items-bold">12:00 — 20:00</span> субота
+              <br>
+              <span class="footer__content--items-bold">12:00 — 20:00</span> неділя
+
+              <p class="footer__content--items-paragraph">
+                <span class="footer__content--items-bold">Вихідні:</span> понеділок, вівторок
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+          </div>
+
+          <div class="footer__content footer__content--contacts">
+            <h5 class="footer__content--title">
+              Контакти:
+            </h5>
+
+            <div class="footer__content--items">
+              вул. М. Грушевського, 6; Київ,
+              <br>
+              01001 тел. +38 (044) 278-13-57
+              <br>
+              факс +38 (044) 278-74-54
+              <br>
+              e-mail: info@namu.kiev.ua
+            </div>
+          </div>
+
+          <div class="footer--line line"></div>
+
+          <div class=" footer__menu footer__menu--left">
+            <ul class="footer__menu--items menu">
+              <li class="footer__menu--item menu__item">
+                <a href="#gallery" class="footer__menu--link menu__link">
+                  Галерея
+                </a>
+              </li>
+              <li class="footer__menu--item menu__item">
+                <a href="#events" class="footer__menu--link menu__link">
+                  Виставки та події
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__menu footer__menu--right">
+            <ul class="footer__menu--items menu">
+              <li class="footer__menu--item menu__item">
+                <a href="#subscribe" class="footer__menu--link menu__link">
+                  Про Нас
+                </a>
+              </li>
+              <li class="footer__menu--item menu__item">
+                <a href="#contacts" class="footer__menu--link menu__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
 
-        <div class="footer__content" id="contacts">
-          <div class="grid">
-            <div class="grid__item grid__item--tablet-2-3 grid__item--laptop-3-4">
-              <h5 class="footer__content--title">
-                Графік роботи
-              </h5>
 
-              <div class="footer__content--items">
-                <span class="footer__content--items-bold">12:00 — 20:00</span> середа
-                <br>
-                <span class="footer__content--items-bold">12:00 — 20:00</span> четвер
-                <br>
-                <span class="footer__content--items-bold">12:00 — 20:00</span> п’ятниця
-                <br>
-                <span class="footer__content--items-bold">12:00 — 20:00</span> субота
-                <br>
-                <span class="footer__content--items-bold">12:00 — 20:00</span> неділя
-
-                <p class="footer__content--items-paragraph">
-                  <span class="footer__content--items-bold">Вихідні:</span> понеділок, вівторок
-                  Каса припиняє роботу за 1 годину
-                  до закриття музею
-                </p>
-              </div>
-            </div>
-
-            <div class="grid__item grid__item--tablet-4-5 grid__item--laptop-5-6">
-              <h5 class="footer__content--title">
-                Контакти:
-              </h5>
-
-              <div class="footer__content--items">
-                вул. М. Грушевського, 6; Київ,
-                <br>
-                01001 тел. +38 (044) 278-13-57
-                <br>
-                факс +38 (044) 278-74-54
-                <br>
-                e-mail: info@namu.kiev.ua
-              </div>
-            </div>
-          </div>
-
-          <div class="footer__content--up">
-            <a href="#" class="footer__content--up-item">
-              <img
-                src="./images/footer_arrow-up.svg"
-                alt="arrow-up"
-                class="footer__content--up-arrow-up"
-              >
-            </a>
-          </div>
-
-          <div class="footer__content--line">
-            <div class="grid__tablet grid__laptop">
-              <div class="grid__item--tablet-2-5 grid__item--laptop-7-7 footer__content--line-container"></div>
-            </div>
-          </div>
-        </div>
-
-        <div class="footer__menu">
-          <div class="grid">
-            <div class="grid__item grid__item--tablet-2-3 grid__item--laptop-8-9">
-              <ul class="footer__menu--items menu">
-                <li class="footer__menu--item menu__item">
-                  <a href="#gallery" class="footer__menu--link menu__link">
-                    Галерея
-                  </a>
-                </li>
-                <li class="footer__menu--item menu__item">
-                  <a href="#events" class="footer__menu--link menu__link">
-                    Виставки та події
-                  </a>
-                </li>
-              </ul>
-            </div>
-
-            <div class="grid__item grid__item--tablet-4-5 grid__item--laptop-10-10">
-              <ul class="footer__menu--items menu">
-                <li class="footer__menu--item menu__item">
-                  <a href="#subscribe" class="footer__menu--link menu__link">
-                    Про Нас
-                  </a>
-                </li>
-                <li class="footer__menu--item menu__item">
-                  <a href="#contacts" class="footer__menu--link menu__link">
-                    Контакти
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
+        <div class="footer--up">
+          <a href="#" class="footer--up-item">
+            <img
+              src="./images/footer_arrow-up.svg"
+              alt="arrow-up"
+              class="footer--up-arrow-up"
+            >
+          </a>
         </div>
 
         <div class="footer__information">
