Gallery x-scroll created

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="layot">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -201,6 +201,97 @@
           <h2 class="gallery__title">
             Галерея
           </h2>
+
+          <div class="gallery__mobile">
+            <div class="gallery__mobile--container">
+              <div class="gallery__mobile--images">
+                <img
+                  src="./images/gallery_image_1.svg"
+                  alt="image_1"
+                  class="gallery__mobile--image gallery__mobile--image-1"
+                  id="image_1"
+                >
+              </div>
+
+              <div class="gallery__mobile--images">
+                <img
+                  src="./images/gallery_image_2.svg"
+                  alt="image_2"
+                  class="gallery__mobile--image gallery__mobile--image-2"
+                  id="image_2"
+                >
+              </div>
+
+              <div class="gallery__mobile--images">
+                <img
+                  src="./images/gallery_image_3.svg"
+                  alt="image_3"
+                  class="gallery__mobile--image gallery__mobile--image-3"
+                  id="image_3"
+                >
+              </div>
+
+              <div class="gallery__mobile--images">
+                <img
+                  src="./images/gallery_image_4.svg"
+                  alt="image_4"
+                  class="gallery__mobile--image gallery__mobile--image-4"
+                  id="image_4"
+                >
+              </div>
+
+              <div class="gallery__mobile--images">
+                <img
+                  src="./images/gallery_image_5.svg"
+                  alt="image_5"
+                  class="gallery__mobile--image gallery__mobile--image-5"
+                  id="image_5"
+                >
+              </div>
+            </div>
+
+            <div class="gallery__mobile--pointer">
+              <div class="gallery__mobile--pointer-item">
+                <a
+                  href="#image_1"
+                  class="gallery__mobile--pointer-link">
+                  1
+                </a>
+              </div>
+
+              <div class="gallery__mobile--pointer-item">
+                <a
+                  href="#image_2"
+                  class="gallery__mobile--pointer-link">
+                  2
+                </a>
+              </div>
+
+              <div class="gallery__mobile--pointer-item">
+                <a
+                  href="#image_3"
+                  class="gallery__mobile--pointer-link">
+                  3
+                </a>
+              </div>
+
+              <div class="gallery__mobile--pointer-item">
+                <a
+                  href="#image_4"
+                  class="gallery__mobile--pointer-link">
+                  4
+                </a>
+              </div>
+
+              <div class="gallery__mobile--pointer-item">
+                <a
+                  href="#image_5"
+                  class="gallery__mobile--pointer-link">
+                  5
+                </a>
+              </div>
+            </div>
+          </div>
 
           <div class="gallery__tablet">
             <div class="grid__tablet gallery__tablet--container">
@@ -424,16 +515,15 @@
           </div>
         </div>
 
-
-        <div class="footer--up">
-          <a href="#" class="footer--up-item">
+        <a href="#" class="footer--up">
+          <div class="footer--up-item">
             <img
               src="./images/footer_arrow-up.svg"
               alt="arrow-up"
               class="footer--up-arrow-up"
             >
-          </a>
-        </div>
+          </div>
+        </a>
 
         <div class="footer__information">
           <div class="footer__information--item">
