layout Museum created

--- a/src/index.html
+++ b/src/index.html
@@ -72,11 +72,11 @@
         </h1>
 
         <div class="header__tickets form-field">
-          <a href="#" class="header__tickets--link form-field--link">
+          <a href="#events" class="header__tickets--link form-field--link">
             Квитки
           </a>
 
-          <a href="#" class="header__tickets--arrows">
+          <a href="#events" class="header__tickets--arrows">
             <img
               src="./images/tickets_group.svg"
               alt="tickets_arrow"
@@ -379,11 +379,11 @@
           </p>
 
           <div class="subscribe__email form-field">
-            <a href="#" class="subscribe__email--link form-field--link">
+            <a href="#contacts" class="subscribe__email--link form-field--link">
               E-mail
             </a>
-  
-            <a href="#" class="subscribe__email--arrows">
+
+            <a href="#contacts" class="subscribe__email--arrows">
               <img
                 src="./images/email_group.svg"
                 alt="subscribe_arrow"
