Add some changes

--- a/src/index.html
+++ b/src/index.html
@@ -384,7 +384,7 @@
                 до закриття музею
               </p>
 
-              <p class="text-block__paragraph">
+              <p class="text-block__paragraph" id="contacts">
                 Контакти:
                 <br>
                 <br>
