--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" href="./images/favicon.jpeg" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
     <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="page__section header">
+      <div class="container">
+        <div class="header__content">
+          <div class="top-actions">
+
+            <img 
+              src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png" 
+              alt="image-museum"
+              class="header__image"
+            >
+
+            <a href="#menu" class="header__icon header__icon--menu"></a>
+
+            <a 
+              href="https://namumuseum.business.site/" 
+              class="logo" 
+              target="_blank"
+            >
+              <img 
+                src="./images/NA_MU.png" 
+                alt="logo"
+                class="header__logo"
+              >
+            </a>
+          </div>
+    
+          <h1 class="header__title">
+            ХУДОЖНIЙ
+            <br>
+            МУЗЕЙ
+          </h1>
+
+          <div class="button">
+            <div class="button__text">
+              КВИТКИ
+            </div>
+            
+            <a
+              href="https://namumuseum.business.site/" 
+              class="button__button" 
+              target="_blank"
+            >
+              <img 
+                src="./images/arrow_right.png" 
+                alt="arrow right"
+                class="button__arrow-right"
+              >
+            </a>
+          </div>
+          <div class="header__events">ПОДІЇ</div>
+
+        </div>
+      </div>
+    </header>
+   
+    <menu></menu>
+
+    <main></main>
+
   </body>
 </html>
