--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,67 @@
       </div>
     </header>
    
-    <!-- <menu></menu> -->
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a href="#" class="icon header__icon--cross"></a>
+
+            <a 
+              href="https://namumuseum.business.site/" 
+              class="logo"
+              target="_blank"
+            >
+              <img 
+                class="header__logo"
+                src="./images/NA_MU.png"
+                alt="logo"
+              >
+            </a>
+          </div>
+  
+          <ul class="menu__list">
+            <!-- <li class="menu__item">
+              <a href="#home" class="menu__link">
+                Home
+              </a>
+            </li> -->
+            <li class="menu__item">
+              <a href="#current-events" class="menu__link">
+                Події
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#gallery" class="menu__link">
+                Галерея
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#subscribe" class="menu__link">
+                Підписка
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#contacts" class="menu__link">
+                Контакти:
+              </a>
+            </li>
+          </ul>
+  
+          <a href="tel:+38 (044) 278-13-57" class="menu__call menu__call--phone">
+            +38 (044) 278-13-57
+          </a>
+          <a 
+            href="https://goo.gl/maps/KSqcFGj4uCJqKJPe9"
+            class="menu__call menu__call--action"
+            target="_blank"
+          >
+            вул. М. Грушевського, 6; м. Київ
+          </a>
+  
+        </div>
+      </div>
+    </nav>
 
     <main class="main">
       <section class="page__section current-events" id="current-events">
@@ -185,6 +245,15 @@
         <div class="container">
           <h2 class="page__section-title page__section-title--subscribe">
             Підписка
+          </h2>
+          
+        </div>
+      </section>
+
+      <section class="page__section subscribe" id="contacts">
+        <div class="container">
+          <h2 class="page__section-title page__section-title--subscribe">
+            Контакти
           </h2>
           
         </div>
