Landing page was fixed

--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
         </section>
         <section class="section__lecture lecture">
           <div class="lecture__container _container">
-            <a target="blank" href="page__body" class="lecture__content">
+            <a target="blank" href="#page-body" class="lecture__content">
               <h3 class="lecture__title title-content">
                 ЛЕКЦІЯ
                 <span class="lecture__title-date">26/08/2019 - 11:00</span>
@@ -143,23 +143,47 @@
         <section class="section__gallery gallery">
           <div class="gallery__container _container">
             <h2 class="gallery__title title-section">Галерея</h2>
-            <div class="gallery__items gallery__items--desktop _swiper">
-              <div class="gallery__item gallery__item--desktop-1-4">
+            <div class="gallery__wrapper">
+              <div class="gallery__items gallery__items--desktop">
+                <div class="gallery__item gallery__item--desktop-1-4">
+                  <a target="blank" href="#page-body" class="gallery__image ibg">
+                    <img src="./images/gallery/1.jpg" alt="image 1" class="ibg__img">
+                  </a>
+                </div>
+                <div class="gallery__item gallery__item--desktop-5-12">
+                  <a target="blank" href="#page-body" class="gallery__image ibg">
+                    <img src="./images/gallery/2.jpg" alt="image 2" class="ibg__img">
+                  </a>
+                </div>
+                <div class="gallery__item gallery__item--desktop-1-8">
+                  <a target="blank" href="#page-body" class="gallery__image ibg">
+                    <img src="./images/gallery/3.jpg" alt="image 3" class="ibg__img">
+                  </a>
+                </div>
+                <div class="gallery__item gallery__item--desktop-9-12">
+                  <a target="blank" href="#page-body" class="gallery__image ibg">
+                    <img src="./images/gallery/4.jpg" alt="image 4" class="ibg__img">
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="gallery__slider _swiper">
+              <div class="gallery__item">
                 <a target="blank" href="#page-body" class="gallery__image ibg">
                   <img src="./images/gallery/1.jpg" alt="image 1" class="ibg__img">
                 </a>
               </div>
-              <div class="gallery__item gallery__item--desktop-5-12">
+              <div class="gallery__item">
                 <a target="blank" href="#page-body" class="gallery__image ibg">
                   <img src="./images/gallery/2.jpg" alt="image 2" class="ibg__img">
                 </a>
               </div>
-              <div class="gallery__item gallery__item--desktop-1-8">
+              <div class="gallery__item">
                 <a target="blank" href="#page-body" class="gallery__image ibg">
                   <img src="./images/gallery/3.jpg" alt="image 3" class="ibg__img">
                 </a>
               </div>
-              <div class="gallery__item gallery__item--desktop-9-12">
+              <div class="gallery__item">
                 <a target="blank" href="#page-body" class="gallery__image ibg">
                   <img src="./images/gallery/4.jpg" alt="image 4" class="ibg__img">
                 </a>
