--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
 
         <ul class="menu__list">
           <li class="menu__item">
-            <a href="#hero" class="menu__link">Художній музей</a>
+            <a href="#hero" class="menu__link">1Художній музей</a>
           </li>
 
           <li class="menu__item">
@@ -293,7 +293,7 @@
                 <span class="schedule__content--bold">11:00 — 19:00</span> неділя
               </p>
               <br><br>
-              Вихідні понеділок, вівторок
+              Вихідні понеділок, вівторок<br>
               Каса припиняє роботу за 1 годину
               до закриття музею
             </div>
