--- a/src/index.html
+++ b/src/index.html
@@ -378,18 +378,23 @@
             Бути в курсі всіх актуальних подій та останніх новин.
           </p>
 
-          <div class="subscribe__email form-field">
-            <a href="#contacts" class="subscribe__email--link form-field--link">
-              E-mail
-            </a>
+          <div class="subscribe__email">
+            <form action="#" method="get">
+              <label>
+                <input
+                  name="email"
+                  type="email"
+                  required placeholder="E-mail"
+                  class="subscribe__email--link"
+                >
+              </label>
+            </form>
 
-            <a href="#contacts" class="subscribe__email--arrows">
-              <img
-                src="./images/email_group.svg"
-                alt="subscribe_arrow"
-                class="subscribe__email--arrow form-field--arrow"
-              >
-            </a>
+            <img
+              src="./images/email_group.svg"
+              alt="subscribe_arrow"
+              class="subscribe__email--arrow"
+            >
           </div>
         </div>
       </section>
