E-mail form fixed

--- a/src/index.html
+++ b/src/index.html
@@ -379,7 +379,7 @@
           </p>
 
           <div class="subscribe__email">
-            <form action="#" method="get">
+            <form class="subscribe__email--form" action="#" method="get">
               <label>
                 <input
                   name="email"
@@ -388,13 +388,15 @@
                   class="subscribe__email--link"
                 >
               </label>
-            </form>
 
-            <img
-              src="./images/email_group.svg"
-              alt="subscribe_arrow"
-              class="subscribe__email--arrow"
-            >
+              <button class="subscribe__email--button">
+                <img
+                  src="./images/email_group.svg"
+                  alt="subscribe_arrow"
+                  class="subscribe__email--button-image"
+                >
+              </button>
+            </form>
           </div>
         </div>
       </section>
