Footer with link in Contacts

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
     <script src="./scripts/main.js" defer></script>
     <link rel="icon" href="./images/favicon.jpeg" type="image/x-icon">
@@ -428,16 +428,27 @@
               <h4 class="footer__title">
                 Контакти:
               </h4>
-  
-              <p class="footer__text">
+              
+              <a 
+                href="https://goo.gl/maps/KSqcFGj4uCJqKJPe9"
+                class="footer__text"
+                target="_blank"
+              >
                 вул. М. Грушевського, 6; Київ, 01001
-                <br>
-                тел. +38 (044) 278-13-57
-                <br>
+              </a>
+              <br>
+              <a href="tel:+38 (044) 278-13-57" class="footer__text">
+                +38 (044) 278-13-57
+              </a>
+              <br>
+              <a href="tel:+38 (044) 278-74-54" class="footer__text">
                 факс +38 (044) 278-74-54
-                <br>
+              </a>
+              <br>
+              <a href="mailto:info@namu.kiev.ua" class="footer__text">
                 e-mail: info@namu.kiev.ua
-              </p>
+              </a>
+              
             </div>
   
           </div>
