--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
           <div class="grid grid--desk">
             <div class="grid__item grid__item--tablet-1-3 grid__item--3-5">
               <div class="header__ticket">
-                <div class="header__field">КВИТКИ</div>
+                <div class="header__field">квитки</div>
                 <a href="#" class="header__link"></a>
               </div>
             </div>
