--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,9 @@
         </a>
       </nav>
       <div class="nav__logo">
-        NA<br>MU
+        <a href="#" class="nav__link">
+          NA<br>MU
+        </a>
       </div>
     </div>
 
@@ -37,11 +39,10 @@
         <div class="header__vertical">
           <a href="#events" class="header__vertical--link">ПОДІЇ</a>
         </div>
-        <div class="button-link header__tickets">
+        <a href="#" target="blank" class="button-link header__tickets">
           <div class="button-link__title header__tickets--title">КВИТКИ</div>
-          <a href="#" class="button-link__button header__tickets--button">
-          </a>
-        </div>
+          <div class="button-link__button header__tickets--button"></div>
+        </a>
       </div>
     </div>
     <div class="menu body__menu" id="menu">
@@ -162,21 +163,23 @@
         <p class="subscription__text">
           Бути в курсі всіх актуальних подій та останніх новин.
         </p>
-        <div class="button-link">
-          <input type="email" placeholder="E-mail" class="button-link__title subscription__button-link--title">
-          <a href="#" class="button-link__button subscription__button"></a>
-        </div>
+        <form action="mailto:info@namu.kiev.ua" class="button-link">
+          <input type="email" placeholder="E-mail" required class="button-link__title subscription__button-link--title">
+          <button type="submit" class="button-link__button subscription__button"></button>
+        </form>
       </div>
     </section>
 
     <section class="about grid" id="contacts">
       <div class="about__logo">
         <div class="about__nav--logo nav__logo">
-          NA<br>MU
+          <a href="#" class="nav__link">
+            NA<br>MU
+          </a>
         </div>
         <div class="about__icons">
-          <div class="about__icon about__icon--facebook"></div>
-          <div class="about__icon about__icon--instagram"></div>
+          <a href="https://www.facebook.com/" class="about__icon about__icon--facebook" target="blank"></a>
+          <a href="https://www.instagram.com/" class="about__icon about__icon--instagram" target="blank"></a>
         </div>
       </div>
       <div class="about__schedule">
@@ -197,11 +200,19 @@
       <div class="about__contacts">
         <p class="about__paragraph">Контакти:</p>
         <br>
-        <p class="about__paragraph">вул. М. Грушевського, 6; Київ, 01001
+        <a href="https://www.google.com.ua/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4494431,30.5285706,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593?hl=ru"
+          class="about__paragraph" target="blank">
+          вул. М. Грушевського, 6; Київ, 0100
+        </a>
+        <a href="tel:+38(044) 278-13-57" class="about__paragraph">
           тел. +38 (044) 278-13-57
+        </a>
+        <a href="tel:+38(044) 278-74-54" class="about__paragraph">
           факс +38 (044) 278-74-54
+        </a>
+        <a href="mailto:info@namu.kiev.ua" class="about__paragraph">
           e-mail: info@namu.kiev.ua
-        </p>
+        </a>
       </div>
 
       <div class="about__round--container">
