page was created

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body class="page__body">
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="header__nav">
           <a href="#" class="header__menu-opener"></a>
-          <a href="" class="header__logo">
+          <a href="#" class="header__logo">
             <img src="images/logo.svg" alt="Museum">
           </a>
         </div>
@@ -30,18 +30,19 @@
               grid__item--Tablet--1-3
               grid__item--Desktop--1-5">
             <div class="header__title">ХУДОЖНІЙ МУЗЕЙ</div>
-        </div>
-        <div class="
+          </div>
+          <div 
+            class="
               grid__item
               grid__item--Tablet--1-3
               grid__item--Desktop--3-5">
-          <div class="header__actions">
-            <div class="header__actions-text">КВИТКИ</div>
-            <div class="header__actions-action">
-              <a href="#" class="header__actions-action--right"></a>
+            <div class="header__actions">
+              <div class="header__actions-text">КВИТКИ</div>
+              <div class="header__actions-action">
+                <a href="#" class="header__actions-action--right"></a>
+              </div>
             </div>
           </div>
-        </div>
         </div>
       </div>
     </header>
@@ -81,28 +82,28 @@
             grid
             grid--Tablet
             grid--Desktop">
-          <div 
-            class="
-              grid__item
-              grid__item--Tablet--1-2
-              grid__item--Desktop--1-7">
-            <img src="images/section-1/photo_2.svg" alt="photo1" class="page__section-1--photo">
-          </div>
-          <div 
-            class="
-              grid__item
-              grid__item--Tablet--1-4
-              grid__item--Desktop--9-12">
-            <div class="page__section-1--date">
-              <h3 class="page__section-1--date__title">ВИСТАВКА</h3>
-              <a href="#" class="page__section-1--date__date">26.08-29.11.2019</a>
+            <div 
+              class="
+                grid__item
+                grid__item--Tablet--1-2
+                grid__item--Desktop--1-7">
+              <img src="images/section-1/photo_2.svg" alt="photo1" class="page__section-1--photo">
             </div>
-            <h2 class="page__section-1--subtitle">
-              І спогади і мрії
-            </h2>
-            <p class="page__section-1--par">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+            <div 
+              class="
+                grid__item
+                grid__item--Tablet--1-4
+                grid__item--Desktop--9-12">
+              <div class="page__section-1--date">
+                <h3 class="page__section-1--date__title">ВИСТАВКА</h3>
+                <a href="#" class="page__section-1--date__date">26.08-29.11.2019</a>
+              </div>
+              <h2 class="page__section-1--subtitle">
+                І спогади і мрії
+              </h2>
+              <p class="page__section-1--par">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+            </div>
           </div>
-        </div>
         </div>
         <div class="page__section-1-photo-3">
           <img src="images/section-1/photo_3.svg" alt="photo3" class="page__section-1-photo-3--photo">
@@ -128,15 +129,15 @@
                 grid__item
                 grid__item--Tablet--1-3
                 grid__item--Desktop--1-4">
-                <img src="images/section-2/photo_1.svg" alt="photo-1" class="photo-1">
-              </div>
+              <img src="images/section-2/photo_1.svg" alt="photo-1" class="photo-1">
+            </div>
             <div 
               class="
                 grid__item
                 grid__item--Tablet--4-6
                 grid__item--Desktop--5-12">
-                <img src="images/section-2/photo_2.svg" alt="photo-2" class="photo-2">
-              </div>
+              <img src="images/section-2/photo_2.svg" alt="photo-2" class="photo-2">
+            </div>
           </div>
           <div 
             class="
@@ -145,16 +146,16 @@
               grid--Desktop">
             <div 
               class="
-                grid__item
-                grid__item--Desktop--1-8">
-                <img src="images/section-2/photo_3.svg" alt="photo-3" class="photo-3">
-              </div>
+              grid__item
+              grid__item--Desktop--1-8">
+              <img src="images/section-2/photo_3.svg" alt="photo-3" class="photo-3">
+            </div>
             <div 
               class="
                 grid__item
                 grid__item--Desktop--9-12">
-                <img src="images/section-2/photo_4.svg" alt="photo-4" class="photo-4">
-              </div>
+              <img src="images/section-2/photo_4.svg" alt="photo-4" class="photo-4">
+            </div>
           </div>
           <div class="point">
             <div class="point__point"></div>
@@ -168,35 +169,35 @@
         <div class="container">
           <div class="page__section-3__title">Підписка</div>
           <div class="page__section-3__subtitle">Бути в курсі всіх актуальних подій та останніх новин.</div>
+          <div 
+            class="
+              grid
+              grid--Tablet
+              grid--Desktop">
             <div 
               class="
-                grid
-                grid--Tablet
-                grid--Desktop">
-              <div 
-                class="
-                  grid__item
-                  grid__item--Tablet--2-5
-                  grid__item--Desktop--4-9
-                  ">
-                <div class="page__section-3--subscription">
-                  <div>
-                    <label>
-                      <input 
-                        type="email" 
-                        name="email" 
-                        placeholder="E-mail" 
-                        class="form-field"
-                        required
-                      >
-                    </label> 
-                  </div>
-                  <div class="page__section-3__actions-action">
-                    <a href="#" class="page__section-3__actions-action--right"></a>
-                  </div>
+                grid__item
+                grid__item--Tablet--2-5
+                grid__item--Desktop--4-9
+                ">
+              <div class="page__section-3--subscription">
+                <div>
+                  <label>
+                    <input 
+                      type="email" 
+                      name="email" 
+                      placeholder="E-mail" 
+                      class="form-field"
+                      required
+                    >
+                  </label> 
+                </div>
+                <div class="page__section-3__actions-action">
+                  <a href="#" class="page__section-3__actions-action--right"></a>
                 </div>
               </div>
             </div>
+          </div>
         </div>
       </div>
       <div class="page__section-4" id="contacts">
@@ -212,7 +213,7 @@
                 grid__item--Tablet--1
                 grid__item--Desktop--1">
               <div class="page__section-4__nav">
-                <a href="" class="header__logo">
+                <a href="#" class="header__logo">
                   <img src="images/logo.svg" alt="Museum">
                 </a>
                 <div class="social-symbols">
@@ -254,30 +255,30 @@
               <div class="contact-us">
                 <h3 class="page__section-4--subtitle">Контакти:</h3>
                 <a 
-                href="https://goo.gl/maps/yAiLJhE2bEXDN3UM8"
-                class="contact-us__info-link"
-                target="_blank"
-              >
-                вул. М. Грушевського, 6; Київ, 01001 <br>
-              </a>
-              <a 
-                href="tel:+38 (044) 278-13-57"
-                class="contact-us__info-link"
-              >
-                тел. +38 (044) 278-13-57 <br>
-              </a>
-              <a 
-                href="tel:+38 (044) 278-74-54"
-                class="contact-us__info-link"
-              >
-                факс +38 (044) 278-74-54 <br>
-              </a>
-              <a 
-                href="email:info@namu.kiev.ua"
-                class="contact-us__info-link"
-              >
-                e-mail: info@namu.kiev.ua
-              </a>
+                  href="https://goo.gl/maps/yAiLJhE2bEXDN3UM8"
+                  class="contact-us__info-link"
+                  target="_blank"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001 <br>
+                </a>
+                <a 
+                  href="tel:+38 (044) 278-13-57"
+                  class="contact-us__info-link"
+                >
+                  тел. +38 (044) 278-13-57 <br>
+                </a>
+                <a 
+                  href="tel:+38 (044) 278-74-54"
+                  class="contact-us__info-link"
+                >
+                  факс +38 (044) 278-74-54 <br>
+                </a>
+                <a 
+                  href="email:info@namu.kiev.ua"
+                  class="contact-us__info-link"
+                >
+                  e-mail: info@namu.kiev.ua
+                </a>
               </div>
             </div>
             <div class="to-top">
